[gd_scene load_steps=12 format=4 uid="uid://toet28won7k8"]

[ext_resource type="Texture2D" uid="uid://bsi52pkx3tth7" path="res://glb_models/PSX Mega Pack (source file)_clock_1.png" id="1_ha23q"]
[ext_resource type="Script" uid="uid://b0kwywkq62lob" path="res://scripts/clock.gd" id="1_qr6e3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_la08w"]
resource_name = "clock_1"
cull_mode = 2
albedo_texture = ExtResource("1_ha23q")
texture_filter = 2
texture_repeat = false

[sub_resource type="ArrayMesh" id="ArrayMesh_sq4y3"]
_surfaces = [{
"aabb": AABB(-0.19757292, -0.030000035, -0.20411767, 0.40231025, 0.030000066, 0.39999998),
"format": 34896613377,
"index_count": 534,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwArAAAABAArAAMAAAAsAAEABAAmACsAEAAmAAQAKwBLAAAAEAAuACYAEQAuABAAJgBMACsAKwBMAEsALgBNACYAJgBNAEwAEQAOAC4AAABLAE4AAABOACwALgBPAE0ADgBPAC4AMAAOABEAMAARABIAMAASABMAUAAOADAAMAATAFEAUQBQADAAUQATABQADgBSAE8AUABSAA4AUQAUACAAIAAUABUAUQBTAFAAIABTAFEAUwA4AFAAIAAVAFQAVAAVABYAIABVAFMAVABVACAAVQA5AFMAUwA5ADgAVABWAFUAVAAWADoAOgBWAFQAFgAYADoAFgAZABgAOgBHAFYAGABHADoAVgAiAFUAVQAiADkAGQBXABgAGQAaAFcAVwAaAA8AVwBYABgAGABYAEcAVwAPAFkAWQAPAA0AVwBaAFgAWQBaAFcAWABIAEcAWQANAAwADAANAAoAWQBbAFoADABbAFkAWgBJAFgAWABJAEgAWwAdAFoAWgAdAEkASgBJAB0AIQBIAEkAIQBJAEoASgAdABcAIQBKABcAWwBEAB0AFwAdAEQARQAhABcARQBIACEAFwBEAEMARQAXAEMAXABEAFsADABcAFsAQwBEABwAXAAcAEQAQQBcAAwADAAKAEEAXQAcAFwAQQBdAFwACgAbAEEAGwBdAEEACgAJABsAXgAbAAkAXgAJAAgABwBeAAgAXgBfABsAGwBfAF0ABwAFAF4ABgAFAAcAXgBgAF8ABQBgAF4AXwBAAF0AXQBAABwAYAAeAF8AXwAeAEAABgA+AAUAAQA+AAYAAQAsAD4APgBhAAUABQBhAGAALABiAD4APgBiAGEALABOAGIAYQA9AGAAYAA9AB4AYgAqAGEAYQAqAD0ATgAzAGIAYgAzACoATgAoADMASwAoAE4ANAAqADMAJAA9ACoAJAAqADQAPAA9ACQAPAAeAD0AJQAkADQAJQA8ACQANAAzACkAKQAzACgAMgA0ACkAPwAeADwAPwBAAB4AKQAoADEAMgApADEAHwBAAD8AHwAcAEAAQwAcAB8AIwAfAD8AIwA/ADwAQgBDAB8AIwBCAB8AQgBFAEMAIwA8ADsAJQA7ADwAIwAiAEIAIwA5ACIAIwA4ADkAIwA7ADgAJQA4ADsAQgBGAEUAQgAiAEYARQBGAEgAVgBGACIARwBIAEYARwBGAFYAJQA3ADgAUAA4ADcAUAA3AFIANgA3ACUAJQA0ADYAUgA3ADUANgA1ADcAUgA1AE8AMgA2ADQAMgA1ADYATwA1ACcAMgAnADUATwAnAE0ACwAnADIAMgAxAAsATQAnAC8ACwAvACcATQAvAEwALQALADEALQAvAAsALQAxACgATAAvAGMALQBjAC8ALQAoAGMATABjAEsASwBjACgA"),
"lods": [0.010093292, PackedByteArray("AAABAAIAAwAAAAIAAwArAAAABAArAAMAAAAsAAEABAAmACsAEAAmAAQAKwAtAAAAEAAuACYAEQAuABAAJgAvACsAKwAvAC0ALgAnACYAJgAnAC8AEQAOAC4AAAAtACgAAAAoACwALQAvAAsACwAvACcAMAAOABEAMAARABIAMAASABMALQAxACgALQALADEAMgAxAAsACwAnADIAKQAoADEAMgApADEAKQAzACgALAAoADMAMgA0ACkANAAzACkAMgAnADUALgA1ACcADgA1AC4AMgA1ADYAMgA2ADQADgA3ADUANgA1ADcAMAA3AA4AJQA0ADYANgA3ACUAMAA4ADcAJQA3ADgAIAA4ADAAMAATACAAIAATABQAIAAUABUAIAA5ADgAIAAVADoAOgAVABYAIAAiADkAOgAiACAAIwA4ADkAIwA5ACIAJQA4ADsAIwA7ADgAJQA7ADwAIwA8ADsAFgAYADoAFgAZABgAGQAaABgAGAAaAA8AJQA8ACQAJQAkADQAJAAqADQANAAqADMAPAA9ACQAJAA9ACoAPAAeAD0APgAzACoALAAzAD4AAQAsAD4AAQA+AAYAPgAqAAUABgA+AAUABQAqAD0ABgAFAAcABQA9ABsABwAFABsAGwA9AB4ABwAbAAgAGwAJAAgACgAJABsAPwAeADwAIwA/ADwAGwAeAEAAPwBAAB4ACgAbAEEAGwBAAEEAHwBAAD8AIwAfAD8AQQBAABwAHwAcAEAADAAKAEEAQQAcAAwADAANAAoADAAPAA0AGAAPAAwAIwBCAB8AIwAiAEIAQwAcAB8AQgBDAB8ADAAcAEQAQwBEABwADABEAB0ADAAdABgAFwBEAEMAFwAdAEQAQgBFAEMARQAXAEMAQgAiAEYAQgBGAEUAOgBGACIARwBGADoAGABHADoARwBIAEYAGABIAEcARQBGAEgAGABJAEgAGAAdAEkARQBIACEAIQBIAEkARQAhABcASgBJAB0AIQBJAEoASgAdABcAIQBKABcA"), 0.021539314, PackedByteArray("AAABAAIAAwAAAAIABAAAAAMAAQAAAAUAAQAFAAYABgAFAAcABwAFABsABwAbAAgAGwAJAAgACgAJABsACgAbAAwADAANAAoADAAPAA0AGAAPAAwAGAAaAA8AGQAaABgAFgAZABgAGwAcAAwADAAcAB0ADAAdABgAGwAeABwABQAeABsAHwAdABwAHwAcAB4AGAAdABcAFwAdAB8AFgAYACAAIAAVABYAIAAUABUAGAAXACEAIQAXAB8AGAAhACAAIAATABQAIQAiACAAIwAiACEAIAAiACMAIwAhAB8ADgATACAAIAAjAA4ADgASABMADgARABIAIwAfACQAHwAeACQADgAjACUAIwAkACUAEQAOACYAEQAmABAAEAAmAAQABAAmAAAADgAnACYADgAlACcAJgAnAAAACwAnACUAAAAnAAsAJQAoAAsAAAALACgAJQApACgAJQAkACkAAAAoACoAKQAqACgAJAAqACkAJAAeACoAAAAqAAUABQAqAB4A"), 0.06122692, PackedByteArray("AAABAAIAAwAAAAIABAAAAAMAAQAAAAUAAQAFAAYABgAFAAcABwAFAAgABQAJAAgACgAJAAUAAAALAAUACgAFAAwADAANAAoADgAFAAsADgALAAAABAAOAAAADgAMAAUADAAPAA0AEAAOAAQAEQAOABAADgARABIADgASABMADgATABQADgAUABUADgAVABYADgAXAAwAFgAYAA4AGAAXAA4ADAAXABgAGAAPAAwAFgAZABgAGAAaAA8AGQAaABgA")],
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 100,
"vertex_data": PackedByteArray("/3/t7gAAAADwVwAAQwYAAP9/AAAAAAAAD6gAAEMGAACJywAAchgAAE4Y7e7DNAAAdjQAAHIYAABOGAAAwzQAADoGAABxWAAAAAAAAP9/AAA6BgAAjacAANCf/3/KHwAATRju7jvLAABNGAAAO8sAAMT57e5xWAAAdTQAAIznAACw5wAAwzQAAMT5AABxWAAA//8AAP9/AADE+QAAjacAALDnAAA7ywAAicsAAIznAAAPqAAAu/kAAC5g/3804AAA/3/t7v//AAD/fwAA//8AAO9XAAC7+QAAAADu7v9/AACgKvS1170AAO9e9LUQ5AAAphb0tf9/AADkLf9/dbsAALDn7e47ywAA0J//fzTgAABd1fS1170AAGPg/39BnwAAnB//f71gAABj4P9/vWAAAInL7e5yGAAAOb70teAqAADwXvS17hsAACVE/38oLgAAoSr0tSdCAAAPqO3uQwYAAPBX7e5DBgAA/3//f8EaAACw5+3uwzQAAA+h9LXuGwAA///t7v9/AAAvYP9/yh8AANm7/38oLgAAxkH0teAqAADlLf9/ikQAAF3V9LUnQgAAGdL/f4pEAAA55PS1e18AAFjp9LX/fwAAOeT0tYOgAAAPqO3uu/kAAE/l/3//fwAArxr/f/9/AADFG/S1fF8AAHY07e5yGAAAmx//f0KfAADFG/S1g6AAADoG7u6NpwAAGdL/f3W7AAAkRP9/1tEAAMVB9LUe1QAA2bv/f9bRAAA5vvS1HtUAADGl/v/a8AAAD6H0tRDkAAD/f/S1TOkAAP9//3895QAA/3/+/z8JAAAxpf7/JA8AABTG/v//HwAAzlr+/yQPAAAu4P7/PzoAALf2/v//fwAAxPnt7o2nAADx8P7/VFsAAPHw/v+qpAAAicvt7oznAAAu4P7/v8UAABTG/v//3wAA71ft7rv5AAD/f/7/v/YAAHU07u6M5wAAzVr+/9rwAADpOf7//98AAM8f//+/xQAADQ///6qkAAA6Bu3ucVgAAEcJ/v//fwAADg/+/1RbAADQH/7/PzoAAOo5/v//HwAA/3/0tbIWAAA=")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_qr6e3"]
resource_name = "PSX Mega Pack (source file)_clock_1"
_surfaces = [{
"aabb": AABB(-0.19757292, -0.030000035, -0.20411767, 0.40231025, 0.030000066, 0.39999998),
"attribute_data": PackedByteArray("Uez+f6z7Dqis+/5/rPvvV6z7dTRR7MzKUexSp6z7iMus+8zKrPtSp6z7/3+s+8zKrPtSp6z7/3+s+6tYUewxNaz7MTWs+4nLUez/f6z7D6is+/9/rPvvV6z7dTSs+zE1rPurWOxuAADYisofmhbDNATYcVgucAAAmRY7y0JUNODrbv//LnD//1HsdTRR7P9/UewxNe6k4Co9wr1gWrByGD3CQZ+ByDvLMVPuGzU8KC5SJidC3Ry9YC4V/3+/Af9/Hil1u1Em170wUxDk2Io04Mm4171R7A6oUezvV1HsiMtR7MzKUez/f1Hs71dR7KtYpBj/fx8pikSSGXxfwC5yGCw64CowTUMGkhmDoBcHjafdHEKf0m/BGkNUyh/loigu/LWJRMm4J0Lqi+4bSW/BGuuRQwaByMM0iMV7X1zd/3/tyf9/d8b/f4jFg6Drkbv5/LV1u+6kHtV1j9rw6osQ5GxvTOnlotbRSW895TU81tEsOh7V0W895a5vTOlR7FKnUeyrWFHsictR7HU0UewPqL8ujOelT9rwL027+W0z/987b7/2pU/a8EJUNOAwUxDkNTzW0Qodv8UsOh7VUSbXvR4pdbupDqqkkhmDoN0cQp+1Cf9/FwdxWKkOVFukGP9/3Ry9YKkOVFsKHT86bjP/Hx8pikQ1PCgubjP/H6ZPJA8sOuAqPG8/CTFT7htDVMofr2+yFt9vPwl1jyQPbG+yFqyr/x/Yisof5aIoLvy1iUQQwj86rKv/HxDCPzpx0FRbybgnQmXV/3+IxXtfPcK9YHfG/389wkGfiMWDoHHQqqRl1f9/BNiNpwTYjacQwr/FWrCM58m41738tXW7rKv/3+Wi1tHqixDk2Io04Kyr/9/fb7/20m/BGklvPeU="),
"format": 34896613399,
"index_count": 534,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAAA1AAEAAwA2AAAAAQA1ADcABAA2AAMAAQA3AAcABAAiADYABwA3AAUACAAiAAQABwAFAAsACAA4ACIACwAFAF8ACQA4AAgACwBfAAwACQAGADgAXwANAAwAOQAGAAkAXwAjAA0AOQAJAAoADgANACMAOQAKABgADgAjADsAOQAYAGAADwAOADsAYAAYABcADwAQAA4AYAAXACQAYQAQAA8AJAAXABYAYQARABAAJAAWAGIAYwARAGEAYgAWABUAYwATABEAYgAVADoAFAATAGMAFQASADoAFABjABIAFQAUABIAZABlAGYAZABnAGUAZgBoACAAZgBpAGgAaQBeAGgAaQAyAF4AXQBeADIAXQAyAGoAHgBnAGQAZwBrAGUAagBrAFwAZwBcAGsAagBcAGwAHgBtAGcAbQBuAGcAQwBtAB4AbABuAG8AbQBvAG4AbABvAHAAQwBxAG0AcQAxAG0ALwBxAEMAcAAxAHIAcQByADEAcAByAHMALwB0AHEAdABCAHEAdQB0AC8AcwBCAC4AdAAuAEIAdQB2AHQAdgAuAHQAcwAuAHcAdgA+AC4AdwAuAD4AdwA+AHgAGwB5AHUAGwB6AHkAegA+AHkAPwB6ABsAeAA+ACwAegAsAD4APwB7AHoAewAsAHoAewBAACwAeAAsAHwAfAAsAEAAfABAAH0AQQB+AD8AQQB/AH4AGQB/AEEAfwCAAH4AGQCBAH8AfQCAAIIAfwCCAIAAfQCCAIMAgQAqAH8ARQCDACoAgQCEACoARQAqAIQATACFAB0ATACGAIUAhgCHAIUAJwCGAEwAJwCIAIYAhgBKAIcAiABKAIYASwCHAEoASwBKAIkAiAAlAEoAiQBKACUAiQAlAIoAigAlAEkAigBJAIsAjABJACUAjAAlAI0ATQCMAI0ATQCNACcAHACOAE0AHACPAI4AjwCQAI4AkQCPABwAkQAcAE8AjwCSAJAAiwCQAJIAkQBOAI8AiwCSAJMAkQBQAE4AkwBOAFAAkwBQAJQAlQCUAFAAlQBQAJYAlwCWAFAAlwBQAJgAmQCYAE8AmQCXAJgAKQCXAJoAKQCbAJcAmwBSAJcAnACbACkAlQBSAJ0AmwCdAFIAlQCdAJ4AnACfAJsAnwA0AJsAnwBVADQAngA0AFUAngBVAKAAoABVAKEAoAChAKIAVgChAFUAVgBVAKMAUwCjAJwAUwBWAKMAIQBWAFMAIQCkAFYApABXAFYApABYAFcAogBXAFgAogBYAFoAJgA8AC0AJgAtAD0AJgBRADwAJgA9AEgAKAA8AFEARwBIAD0AKABEADwARwA9ACsAKAAwAEQARwArAEYARwBGABoApQAaAEYAKABUADAAVABbADAAVABZAFsAWQAfAFsAWQAzAB8AMwCmAB8A"),
"lods": [0.010093292, PackedByteArray("AAABAAIAAwAAAAIAAAA1AAEAAwA2AAAAAQA1ADcABAA2AAMAAQA3AAcABAAiADYABwA3AAUACAAiAAQABwAFAAsACAA4ACIACQA4AAgACQAGADgAOQAGAAkAOQAJAAoAOQAKABgAOQAYACQAJAAYABcAJAAXABYAJAAWADoAOgAWABUAFQASADoAFQAUABIAFAATABIAEgATABEAEgARAA8ADwARABAADwAQAA4ADwAOADsADgAjADsADgANACMAIwANAAwACwAjAAwACwAFACMAJgA8AC0AJgAtAD0APAA+AC0ALQA+ACwALQAsAD0AGwAsAD4AGwA+AC8APwAsABsALwA+AC4APAAuAD4APwBAACwAPQAsAEAAQQBAAD8ALwAuAEIALwBCAEMARAAuADwARABCAC4AQQAqAEAAGQAqAEEAGQBFACoAKwBAACoAPQBAACsARQBGACoAKwAqAEYARQAaAEYARwArAEYARwA9ACsARwBGABoARwBIAD0AJgA9AEgAGgAlAEcARwBJAEgARwAlAEkAGgBKACUASwBKABoATABKAEsATABLAB0AJwBKAEwAJwAlAEoATQAlACcATQBJACUAHABJAE0AHABOAEkASABJAE4ASABOACYATwBOABwATwBQAE4AJgBOAFAAKQBQAE8AJgBQAFEAJgBRADwAKQBSAFAAKABRAFAAKAA8AFEAKABQAFIAKABEADwAKQA0AFIAKABSADQAUwA0ACkAKAAwAEQAMABCAEQAKAA0AFQAKABUADAAUwBVADQAVAA0AFUAVgBVAFMAIQBWAFMAIQBXAFYAVgBXAFUAIQBYAFcAVABVAFkAWQBVAFcAMwBXAFgAWQBXADMAMwBYAFoAMwBaAB8AWQAzAB8AVABZAFsAWQAfAFsAVABbADAAWwAxADAAMAAxAEIAQwBCADEAQwAxAB4AWwBcADEAHwBcAFsAHgAxAFwAHwAyAFwAHgBcADIAXQAyAB8AHgAyACAAXQBeADIAIAAyAF4A"), 0.021539314, PackedByteArray("AAABAAIAAwAAAAIABAAAAAMAAQAAAAUABAAiAAAAAQAFAAcACAAiAAQABwAFAAsACQAiAAgACQAGACIABgAJAAoABgAKABgACwAFACMACwAjAAwAIwANAAwADgANACMADgAjAA8ADwAQAA4ADwARABAAEgARAA8AEgATABEAFAATABIAFQAUABIAFQASACQABgAYACQAJAAWABUAJAAYABcAJAAXABYAGgAlACYAHQAlABoAJwAlAB0AHAAlACcAHAAmACUAHAAoACYAKQAoABwAJgAqABoAGQAaACoAJgArACoAGQAqACwAKwAsACoAGQAsABsAJgAtACsALQAsACsAKAAtACYAGwAsAC4ALQAuACwAGwAuAC8AKAAwAC0AMAAuAC0ALwAuADEAMAAxAC4ALwAxAB4AHgAxADIAMAAyADEAHgAyACAAIAAyAB8AHwAyADAAMwAfADAAKAAzADAAIQAfADMAIQAzACkAKAA0ADMAMwA0ACkAKQA0ACgA"), 0.06122692, PackedByteArray("AAABAAIAAwAAAAIABAAAAAMAAQAAAAUABAAGAAAAAQAFAAcACAAGAAQACQAGAAgABgAJAAoABwAFAAsACwAFAAwABQANAAwADgANAAUADgAFAA8ADwAQAA4ADwARABAAEgARAA8AEgATABEAFAATABIAFQAUABIAFQASAAYABgAWABUABgAXABYABgAYABcABgAKABgAGQAaABsAHAAbABoAHAAaAB0AHAAeABsAHAAfAB4AHgAfACAAIQAfABwA")],
"material": SubResource("StandardMaterial3D_la08w"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 167,
"vertex_data": PackedByteArray("/3/t7gAAAADwVwAAQwb+CP9/AAAAAAAAD6gAAEMG/giJywAAchjzEU4Y7e7DNF3lxPnt7nFY7SJ2NAAAchjzEbDnAADDNF3lxPkAAHFY7SL//wAA/3+qKk4YAADDNF3lOgYAAHFYEd0AAAAA/39U1ToGAACNp17OTRju7jvLdMhNGAAAO8t0yHU0AACM5+TD/3/t7v///7/vVwAAu/n8wP9/AAD///+/D6gAALv5/MCJywAAjOfkw7DnAAA7y4o3xPkAAI2noDH/f+3uAACTxdCf/3/KH/+/Thjt7sM0XsPE+e3ucVjfwf9/7e4AAJPFTRju7jvL37wuYP9/NOD/v/9/7e7//2u6/3/t7v//a7qJy+3uchjzEQAA7u7/f1TVsOft7jvLijc5vvS14Cqrr2Pg/3+9YP+/icvt7nIYi8Rj4P9/QZ//v7Dn7e47y9+88F70te4bZKolRP9/KC7/v6Eq9LUnQv+1nB//f71g/7+mFvS1/388wwAA7u7/fy/A5C3/f3W7/7+gKvS11726zu9e9LUQ5FbW0J//fzTg/79d1fS1173tzvBX7e5DBv4ID6jt7kMG/gh2NO3uchjzEbDn7e7DNF3l///t7v9/qioPqO3uu/n8wDoG7u6Np17Orxr/f/9//7/lLf9/ikT/v8Ub9LV8X628djTt7nIYi8TGQfS14CoKsPBX7e5DBk3FxRv0tYOgV8k6Bu7ujad2vpsf/39Cn/+//3//f8EaW6AvYP9/yh//v9m7/38oLv+/GdL/f4pE/79d1fS1J0LPtQ+h9LXuG7Oq/3//f8EaW6APqO3uQwZNxbDn7e7DNF/DOeT0tXtfubz//+3u/38vwFjp9LX/fzzDT+X/f/9//7855PS1g6BoyQ+o7e67+bq6GdL/f3W7/785vvS1HtVA0zGl/v/a8O/DD6H0tRDkVtb/f/S1TOlL19m7/3/W0f+//3//fz3l/N8kRP9/1tH/v8VB9LUe1WbT/3//fz3l/N//f/S1TOlM1zoG7e5xWBHdxPnt7o2noDF1NO7ujOfkw4nL7e6M5+TD71ft7rv5/MB1NO7ujOeVu81a/v/a8O/D71ft7rv5ubrpOf7//99hw/9//v+/9iHEzVr+/9rw78MuYP9/NOCx3u9e9LUQ5B7WJET/f9bR+dnPH///v8V+wsVB9LUe1R3ToCr0tde97c7kLf9/dbuZ1A0P//+qpF7BxRv0tYOgaMmbH/9/Qp9wzUcJ/v//fxrAOgbt7nFY38EOD/7/VFvQvq8a/3//f/bFnB//f71g6b0OD/7/VFvQvtAf/v8/OqO96jn+//8fsLzlLf9/ikRWtSVE/38oLlat6jn+//8fr7zOWv7/JA8UvMZB9LXgKlOv/3/+/z8J3LvwXvS17hsYqy9g/3/KH0el/3/0tbIWx6j/f/7/PwncuzGl/v8kDxS8/3/0tbIWx6gUxv7//x+vvNCf/3/KH++j2bv/fyguT6wZ0v9/ikTHtS7g/v8/OqK9FMb+//8fsLwu4P7/PzqjvfHw/v9UW9C+XdX0tSdCL7a39v7//38awDnk9LV7X6G8Y+D/f71g0b1P5f9//3/2xWPg/39Bn3DNOeT0tYOgV8nx8P7/qqRewbf2/v//fxrAxPnt7o2ndr7E+e3ujad2vi7g/v+/xX7Cicvt7oznlLtd1fS11726zhnS/391u5nUFMb+///fYMPZu/9/1tFD2g+h9LUQ5B7W0J//fzTgsd4Uxv7//99hw/9//v+/9iHE/3//f8Ea/7//f/9/PeX/v/+//z+sRFK7/7//P1K7rEQNt/FI/kwAs/GuDVHxSA23ALP+TPGuDVGqqlVV/kwAsw1R8a5UVaqqFlropbJfTKCyX0ygymY0mf9//3+ncFeP/3//f1ePp3A0mcpmTKCyX+ilFlqk/y+A/v//f5n5TYyN8Z94z/+lf6b5OI3///9/z/+Yf5b/L4ANt/FIVFWqqkygsl9S8D6p////f+72U3v///9/xvKmeQjmmnP///9/yNBSbP7//3+i0FFoTvhfj////3/r2T1p7++bd////3+L6rilrERSu1K7rETxSA23ALP+TKqqVFVXj6dwFlropf///3/+//9/Rs+zaVL7D4lI1s5xZf3ihDfUHGio+P2O////f7jr8oX+//9//v//f////3+r6x6vT/Zvmwz6uWsb+2V9svOoedvpuLCe8E94UOhbr/7//39u6Lardfpoff///3/L7VudB/66g5r3DpCF+oqD////f7n2jIb///9/J+NQb3H5uXZz/IV6DVHxruilFlrKZjSZNJnKZqdwV48/+wyKQfzufT79g4UG+Vp84v/If0b8IH6s6xR1ye0+cprZMGWD9ht7IOJJbEbajGpc0WNk3PRXekbUbmhwyhRiLPQWepv4cY6J9F56EsYJY33DFGWJ9Fp6+fUle3T4eHxMwzNow8a7bnf4Vnzm+xB+OtfQbsL/HIAg4/B4CtNAd0/2a4Pi/8J/D/4YhJP8T3ZV/IaH4/LrqXjse7gc6cu8HPsEinf8iYct+wWKXPp0i/bsTa8V+tKLium3sN3kg7wI4+u5FOKOtRzoxqtY+iGLFfrSiwHxrXgB8aR4Gvt6ifT1Ins96ROmY+Sirkj8+YaL512lPfI0khP1UpRr/PaGyP8cgP7//3////9/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_sq4y3")

[sub_resource type="ArrayMesh" id="ArrayMesh_q575u"]
_surfaces = [{
"aabb": AABB(-0.0056733866, -1.4063565e-08, -0.04243343, 0.011374668, 0.0018000002, 0.13236643),
"format": 34359742465,
"index_count": 108,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQAAgAFAAQABAAGAAMABAAFAAYAAgAHAAUABgAFAAcAAQAHAAIAAwAGAAgABgAHAAgAAwAIAAAAAQAJAAcACAAHAAkACAAJAAoAAAAIAAoAAAALAAEAAAAKAAsACwAMAAEADAAJAAEACgAJAA0ADAANAAkACgANAA4ACwAKAA4ACwAPAAwACwAOAA8ADwAQAAwAEAANAAwADwAOABEADwASABAADwARABIADgATABEAEgARABMADgANABMAEgATABAAEAATAA0A"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("0dG6OzeccbIPR/S6ZKrwujWccbLbOQm80ee5uzeccbI8R/S64bUFOzeccbLKLrg9Y16DuzWccbLLLrg9Y16Du4Pt6zrLLrg94bUFO4Pt6zrKLrg90ee5u4Pt6zo8R/S60dG6O4Pt6zoPR/S6ZKrwuoPt6zrbOQm8t8wKO4Pt6zrbOQm8t8wKOzWccbLbOQm89edwuzeccbKEiVS89edwu4Pt6zqEiVS8QiiEO4Pt6zqWiVS8QiiEOzeccbKWiVS8yy5zuzWccbKtzi29royJO4Pt6zqlzi29royJOzWccbKlzi29yy5zu4Pt6zqtzi29")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_o5s8l"]
resource_name = "PSX Mega Pack (source file)_clock_1_arm_hours"
_surfaces = [{
"aabb": AABB(-0.0056733866, -1.4063565e-08, -0.04243343, 0.011374668, 0.0018000002, 0.13236643),
"attribute_data": PackedByteArray("BK9nPyrWNj+CoGI/tDQyP3oNYD8q1jY/QjplPz4deD9SK2E/Ph14P5hHZT+0NDI/iGRhP+rvLj+FkGY/6e8uP5BeYT+r/Bk/yKxmP6z8GT8Er2c/KtY2P4KgYj+0NDI/mEdlP7Q0Mj+IZGE/6u8uP3oNYD8q1jY/QjplPz4deD9SK2E/Ph14P4WQZj/p7y4/kF5hP6v8GT/IrGY/rPwZP0I6ZT8+HXg/BK9nPyrWNj8Er2c/KtY2P0I6ZT8+HXg/yKxmP6z8GT+QXmE/q/wZP5BeYT+r/Bk/yKxmP6z8GT+QXmE/q/wZP4hkYT/q7y4/iGRhP+rvLj+QXmE/q/wZPwSvZz8q1jY/mEdlP7Q0Mj+YR2U/tDQyPwSvZz8q1jY/UithPz4deD9COmU/Ph14P0I6ZT8+HXg/UithPz4deD+YR2U/tDQyP4WQZj/p7y4/hZBmP+nvLj+YR2U/tDQyP4KgYj+0NDI/eg1gPyrWNj96DWA/KtY2P4KgYj+0NDI/eg1gPyrWNj9SK2E/Ph14P1IrYT8+HXg/eg1gPyrWNj+IZGE/6u8uP4KgYj+0NDI/gqBiP7Q0Mj+IZGE/6u8uP4WQZj/p7y4/yKxmP6z8GT/IrGY/rPwZP4WQZj/p7y4/"),
"format": 34359742487,
"index_count": 108,
"index_data": PackedByteArray("AAABAAIAAwAAAAIAAwACAAQAAAAFAAEABQAGAAEABQAHAAYABwAIAAYABwAJAAgACgALAAwADAALAA0ACgAOAAsADwAOAAoADwAQAA4ADAANABEAEQANABIAEQASABMAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkA"),
"material": SubResource("StandardMaterial3D_la08w"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("0dG6OzeccbIPR/S6ZKrwujWccbLbOQm80ee5uzeccbI8R/S64bUFOzeccbLKLrg9Y16DuzWccbLLLrg9t8wKOzWccbLbOQm89edwuzeccbKEiVS8QiiEOzeccbKWiVS8yy5zuzWccbKtzi29royJOzWccbKlzi290dG6O4Pt6zoPR/S6ZKrwuoPt6zrbOQm8t8wKO4Pt6zrbOQm89edwu4Pt6zqEiVS80ee5u4Pt6zo8R/S64bUFO4Pt6zrKLrg9Y16Du4Pt6zrLLrg9QiiEO4Pt6zqWiVS8yy5zu4Pt6zqtzi29royJO4Pt6zqlzi294bUFOzeccbLKLrg90dG6O4Pt6zoPR/S60dG6OzeccbIPR/S64bUFO4Pt6zrKLrg9royJOzWccbKlzi29yy5zu4Pt6zqtzi29yy5zuzWccbKtzi29royJO4Pt6zqlzi29yy5zuzWccbKtzi299edwu4Pt6zqEiVS89edwuzeccbKEiVS8yy5zu4Pt6zqtzi290dG6OzeccbIPR/S6t8wKO4Pt6zrbOQm8t8wKOzWccbLbOQm80dG6O4Pt6zoPR/S6Y16DuzWccbLLLrg94bUFO4Pt6zrKLrg94bUFOzeccbLKLrg9Y16Du4Pt6zrLLrg9t8wKOzWccbLbOQm8QiiEO4Pt6zqWiVS8QiiEOzeccbKWiVS8t8wKO4Pt6zrbOQm8ZKrwujWccbLbOQm80ee5u4Pt6zo8R/S60ee5uzeccbI8R/S6ZKrwuoPt6zrbOQm80ee5uzeccbI8R/S6Y16Du4Pt6zrLLrg9Y16DuzWccbLLLrg90ee5u4Pt6zo8R/S69edwuzeccbKEiVS8ZKrwuoPt6zrbOQm8ZKrwujWccbLbOQm89edwu4Pt6zqEiVS8QiiEOzeccbKWiVS8royJO4Pt6zqlzi29royJOzWccbKlzi29QiiEO4Pt6zqWiVS8/38AAP7//z//fwAA/v//P/9/AAD+//8//38AAP///z//fwAA////P/9/AAD+//8//38AAP7//z//fwAA/v//P/9/AAD+//8//38AAP7//z//f////v//v/9////+//+//3////7//7//f////v//v/9////+//+//3///////7//f///////v/9////+//+//3////7//7//f////v//vxT7/3////8/FPv/f////z8U+/9/////PxT7/3////8//////////7//////////v/////////+//////////78nAP9/////PycA/3////8/JwD/f////z8nAP9/////P///bq3///+///9urf///7///26t////v///bq3///+//3//f////z//f/9/////P/9//3////8//3//f////z9Z2v9/////P1na/3////8/Wdr/f////z9Z2v9/////PwAAda////+/AAB1r////78AAHWv////vwAAda////+/RgL/f////z9GAv9/////P0YC/3////8/RgL/f////z+WJP9/////P5Yk/3////8/liT/f////z+WJP9/////P0j//3////8/SP//f////z9I//9/////P0j//3////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_q575u")

[sub_resource type="ArrayMesh" id="ArrayMesh_7gpo8"]
_surfaces = [{
"aabb": AABB(-0.0055306433, 2.814962e-09, -0.047059797, 0.011436151, 0.0020000036, 0.17557672),
"format": 34359742465,
"index_count": 108,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAgAEAAMAAQAEAAIAAwAEAAUAAQAFAAQAAAADAAYAAwAFAAYAAAAHAAEAAAAGAAcABQAIAAYABwAGAAgABwAIAAkAAQAHAAkACgAFAAEAAQAJAAoACgALAAUABQALAAgACQAIAAwACwAMAAgACQAMAA0ACgAJAA0ADgALAAoACgANAA4ADgAPAAsACwAPAAwAEAAPAA4ADQAMABEADwARAAwAEAASAA8ADwASABEADgATABAADgANABMAEwASABAADQARABMAEwARABIA"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 20,
"vertex_data": PackedByteArray("gpIJO1ZxQTHxmQM+Zjq1uyCf2DEyl/O6490uu1ZxQTHxmQM+gpIJO3sSAzvxmQM+490uu3sSAzvxmQM+Zjq1u4oSAzszl/O6/4LBO4oSAzvNlvO6/4LBOx+f2DHMlvO6zAYeO4oSAzsyTPi7zAYeOyCf2DEyTPi7zPcuuyCf2DEyTPi7zPcuu4oSAzsyTPi7/4GNO4oSAzsZ2Vm8/4GNOx+f2DEZ2Vm8/3htux+f2DEZ2Vm8/3htu4oSAzsZ2Vm8/0GBuyCf2DHGwUC9mTyNO4oSAzvGwUC9/0GBu4oSAzvGwUC9mTyNOyCf2DHGwUC9")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_k30pi"]
resource_name = "PSX Mega Pack (source file)_clock_1_arm_minutes"
_surfaces = [{
"aabb": AABB(-0.0055306433, 2.814962e-09, -0.047059797, 0.011436151, 0.0020000036, 0.17557672),
"attribute_data": PackedByteArray("5qxlPx7q/z6NEWE/cLz9Pf7LYj8e6v8+PvlnP3C8/T0k3WU/gHTgPcHLYj9wdOA97gNnP4gswz1VOGI/kCzDPaYCZz+AcTI8swZiP4BxMjzmrGU/Hur/Po0RYT9wvP09PvlnP3C8/T3+y2I/Hur/PiTdZT+AdOA9wctiP3B04D3uA2c/iCzDPVU4Yj+QLMM9pgJnP4BxMjyzBmI/gHEyPI0RYT9wvP09/stiPx7q/z7+y2I/Hur/Po0RYT9wvP095qxlPx7q/z4++Wc/cLz9PT75Zz9wvP095qxlPx7q/z7uA2c/iCzDPaYCZz+AcTI8pgJnP4BxMjzuA2c/iCzDPcHLYj9wdOA9jRFhP3C8/T2NEWE/cLz9PcHLYj9wdOA9pgJnP4BxMjyzBmI/gHEyPLMGYj+AcTI8pgJnP4BxMjwk3WU/gHTgPe4DZz+ILMM97gNnP4gswz0k3WU/gHTgPVU4Yj+QLMM9wctiP3B04D3By2I/cHTgPVU4Yj+QLMM9/stiPx7q/z7mrGU/Hur/PuasZT8e6v8+/stiPx7q/z4++Wc/cLz9PSTdZT+AdOA9JN1lP4B04D0++Wc/cLz9PbMGYj+AcTI8VThiP5Aswz1VOGI/kCzDPbMGYj+AcTI8"),
"format": 34359742487,
"index_count": 108,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAQADAAQAAQAEAAUABQAEAAYABQAGAAcABwAGAAgABwAIAAkACgALAAwACgANAAsACwAOAAwACwAPAA4ADwAQAA4ADwARABAAEQASABAAEQATABIAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkA"),
"material": SubResource("StandardMaterial3D_la08w"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 60,
"vertex_data": PackedByteArray("gpIJO1ZxQTHxmQM+Zjq1uyCf2DEyl/O6490uu1ZxQTHxmQM+/4LBOx+f2DHMlvO6zAYeOyCf2DEyTPi7zPcuuyCf2DEyTPi7/4GNOx+f2DEZ2Vm8/3htux+f2DEZ2Vm8mTyNOyCf2DHGwUC9/0GBuyCf2DHGwUC9gpIJO3sSAzvxmQM+Zjq1u4oSAzszl/O6/4LBO4oSAzvNlvO6490uu3sSAzvxmQM+zAYeO4oSAzsyTPi7zPcuu4oSAzsyTPi7/4GNO4oSAzsZ2Vm8/3htu4oSAzsZ2Vm8mTyNO4oSAzvGwUC9/0GBu4oSAzvGwUC9Zjq1uyCf2DEyl/O6490uu3sSAzvxmQM+490uu1ZxQTHxmQM+Zjq1u4oSAzszl/O6gpIJO1ZxQTHxmQM+/4LBO4oSAzvNlvO6/4LBOx+f2DHMlvO6gpIJO3sSAzvxmQM+/4GNOx+f2DEZ2Vm8mTyNO4oSAzvGwUC9mTyNOyCf2DHGwUC9/4GNO4oSAzsZ2Vm8zPcuuyCf2DEyTPi7Zjq1u4oSAzszl/O6Zjq1uyCf2DEyl/O6zPcuu4oSAzsyTPi7mTyNOyCf2DHGwUC9/0GBu4oSAzvGwUC9/0GBuyCf2DHGwUC9mTyNO4oSAzvGwUC9zAYeOyCf2DEyTPi7/4GNO4oSAzsZ2Vm8/4GNOx+f2DEZ2Vm8zAYeO4oSAzsyTPi7/3htux+f2DEZ2Vm8zPcuu4oSAzsyTPi7zPcuuyCf2DEyTPi7/3htu4oSAzsZ2Vm8490uu1ZxQTHxmQM+gpIJO3sSAzvxmQM+gpIJO1ZxQTHxmQM+490uu3sSAzvxmQM+/4LBOx+f2DHMlvO6zAYeO4oSAzsyTPi7zAYeOyCf2DEyTPi7/4LBO4oSAzvNlvO6/0GBuyCf2DHGwUC9/3htu4oSAzsZ2Vm8/3htux+f2DEZ2Vm8/0GBu4oSAzvGwUC9/38AAP///z//fwAA////P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD///8//38AAP7//z//fwAA/v//P/9/AAD+//8//38AAP///z//f///////v/9///////+//3////7//7//f///////v/9///////+//3///////7//f////v//v/9////+//+//3////7//7//f///////v74C/3////8/vgL/f////z++Av9/////P74C/3////8/XPz/f////z9c/P9/////P1z8/3////8/XPz/f////z///waA////v///BoD///+///8GgP///7///waA////vwAArqr///+/AACuqv///78AAK6q////vwAArqr///+//////////7//////////v/////////+//////////7/73/9/////P/vf/3////8/+9//f////z/73/9/////P0sS/3////8/SxL/f////z9LEv9/////P0sS/3////8//3//f////z//f/9/////P/9//3////8//3//f////z///4uw////v///i7D///+///+LsP///7///4uw////vzQB/3////8/NAH/f////z80Af9/////PzQB/3////8/")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_7gpo8")

[sub_resource type="ArrayMesh" id="ArrayMesh_1ppmf"]
_surfaces = [{
"aabb": AABB(-0.0037824132, 5.033934e-09, -0.047059797, 0.007138605, 0.011000002, 0.19557673),
"format": 34359742465,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAgADAAAAAgAEAAMAAQAEAAIAAwAEAAUAAQAFAAQAAAADAAYAAwAFAAYAAAAHAAEAAAAGAAcABQAIAAYABwAGAAgABwAIAAkAAQAHAAkACgAFAAEAAQAJAAoACgALAAUABQALAAgACQAIAAwACwAMAAgACQAMAA0ACgAJAA0ADgALAAoACgANAA4ADgAPAAsACwAPAAwAEAAPAA4ADQAMABEADwARAAwAEAASAA8ADwASABEADgATABAADgANABMAEwASABAADQARABMAEwARABIAFAAVABYAFAAXABUAFgAVABgAGQAXABQAFgAYABoAGQAaABgAGQAbABcAGQAYABsA"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 28,
"vertex_data": PackedByteArray("uP+3ORaE+jHSFBg+XeJ3uyq6tjEtl/O6gFzaufT2rDHSFBg+uP+3OY4SAzvSFBg+gFzauYQSAzvSFBg+XeJ3u4YSAzsul/O6j/NbO5ASAzvVlvO6j/NbOw0GBTLUlvO6KfuhOo0SAzsyTPi7KfuhOllp7zEyTPi7Kd3autc7xTEyTPi7Kd3auocSAzsyTPi7j/EXO48SAzsa2Vm8j/EXO7Bl/zEa2Vm8kOY+uw3YyjEY2Vm8kOY+u4gSAzsY2Vm8j/FTuw7YyjHGwUC9w2YXO48SAzvGwUC9j/FTu4gSAzvGwUC9w2YXO7Fl/zHGwUC93xJWu4oSAzuNvrM2RIKDuV85NDzexVE7WIKDuYwSAzvfxVE73RJWu185NDwNvrM2W8Y/O185NDwkPrW455USuYwSAzvp8Fm7WcY/O4sSAzsYPrW4v5USuV85NDzq8Fm7")
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_irm82"]
resource_name = "PSX Mega Pack (source file)_clock_1_arm_seconds"
_surfaces = [{
"aabb": AABB(-0.0037824132, 5.033934e-09, -0.047059797, 0.007138605, 0.011000002, 0.19557673),
"attribute_data": PackedByteArray("5qxlPx7q/z6NEWE/cLz9Pf7LYj8e6v8+PvlnP3C8/T0k3WU/gHTgPcHLYj9wdOA97gNnP4gswz1VOGI/kCzDPaYCZz+AcTI8swZiP4BxMjzmrGU/Hur/Po0RYT9wvP09PvlnP3C8/T3+y2I/Hur/PiTdZT+AdOA9wctiP3B04D3uA2c/iCzDPVU4Yj+QLMM9pgJnP4BxMjyzBmI/gHEyPI0RYT9wvP09/stiPx7q/z7+y2I/Hur/Po0RYT9wvP095qxlPx7q/z4++Wc/cLz9PT75Zz9wvP095qxlPx7q/z7uA2c/iCzDPaYCZz+AcTI8pgJnP4BxMjzuA2c/iCzDPcHLYj9wdOA9jRFhP3C8/T2NEWE/cLz9PcHLYj9wdOA9pgJnP4BxMjyzBmI/gHEyPLMGYj+AcTI8pgJnP4BxMjwk3WU/gHTgPe4DZz+ILMM97gNnP4gswz0k3WU/gHTgPVU4Yj+QLMM9wctiP3B04D3By2I/cHTgPVU4Yj+QLMM9/stiPx7q/z7mrGU/Hur/PuasZT8e6v8+/stiPx7q/z4++Wc/cLz9PSTdZT+AdOA9JN1lP4B04D0++Wc/cLz9PbMGYj+AcTI8VThiP5Aswz1VOGI/kCzDPbMGYj+AcTI8SIhiP/hFAj5MvGQ/5NELPky8ZD/k0Qs+SIhiP/hFAj5MvGQ/5NELPtRUZj90gQM+1FRmP3SBAz5MvGQ/5NELPnjNZD/4mvQ91FRmP3SBAz54zWQ/+Jr0PdRUZj90gQM+eM1kP/ia9D1IiGI/+EUCPkiIYj/4RQI+eM1kP/ia9D0="),
"format": 34359742487,
"index_count": 132,
"index_data": PackedByteArray("AAABAAIAAAADAAEAAQADAAQAAQAEAAUABQAEAAYABQAGAAcABwAGAAgABwAIAAkACgALAAwACgANAAsACwAOAAwACwAPAA4ADwAQAA4ADwARABAAEQASABAAEQATABIAFAAVABYAFAAXABUAGAAZABoAGAAbABkAHAAdAB4AHAAfAB0AIAAhACIAIAAjACEAJAAlACYAJAAnACUAKAApACoAKAArACkALAAtAC4ALAAvAC0AMAAxADIAMAAzADEANAA1ADYANAA3ADUAOAA5ADoAOAA7ADkAPAA9AD4APAA/AD0AQABBAEIAQABDAEEARABFAEYARABHAEUASABJAEoASABLAEkA"),
"material": SubResource("StandardMaterial3D_la08w"),
"name": "clock_1",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 76,
"vertex_data": PackedByteArray("uP+3ORaE+jHSFBg+XeJ3uyq6tjEtl/O6gFzaufT2rDHSFBg+j/NbOw0GBTLUlvO6KfuhOllp7zEyTPi7Kd3autc7xTEyTPi7j/EXO7Bl/zEa2Vm8kOY+uw3YyjEY2Vm8w2YXO7Fl/zHGwUC9j/FTuw7YyjHGwUC9uP+3OY4SAzvSFBg+XeJ3u4YSAzsul/O6j/NbO5ASAzvVlvO6gFzauYQSAzvSFBg+KfuhOo0SAzsyTPi7Kd3auocSAzsyTPi7j/EXO48SAzsa2Vm8kOY+u4gSAzsY2Vm8w2YXO48SAzvGwUC9j/FTu4gSAzvGwUC9XeJ3uyq6tjEtl/O6gFzauYQSAzvSFBg+gFzaufT2rDHSFBg+XeJ3u4YSAzsul/O6uP+3ORaE+jHSFBg+j/NbO5ASAzvVlvO6j/NbOw0GBTLUlvO6uP+3OY4SAzvSFBg+j/EXO7Bl/zEa2Vm8w2YXO48SAzvGwUC9w2YXO7Fl/zHGwUC9j/EXO48SAzsa2Vm8Kd3autc7xTEyTPi7XeJ3u4YSAzsul/O6XeJ3uyq6tjEtl/O6Kd3auocSAzsyTPi7w2YXO7Fl/zHGwUC9j/FTu4gSAzvGwUC9j/FTuw7YyjHGwUC9w2YXO48SAzvGwUC9KfuhOllp7zEyTPi7j/EXO48SAzsa2Vm8j/EXO7Bl/zEa2Vm8KfuhOo0SAzsyTPi7kOY+uw3YyjEY2Vm8Kd3auocSAzsyTPi7Kd3autc7xTEyTPi7kOY+u4gSAzsY2Vm8gFzaufT2rDHSFBg+uP+3OY4SAzvSFBg+uP+3ORaE+jHSFBg+gFzauYQSAzvSFBg+j/NbOw0GBTLUlvO6KfuhOo0SAzsyTPi7KfuhOllp7zEyTPi7j/NbO5ASAzvVlvO6j/FTuw7YyjHGwUC9kOY+u4gSAzsY2Vm8kOY+uw3YyjEY2Vm8j/FTu4gSAzvGwUC93xJWu4oSAzuNvrM2RIKDuV85NDzexVE7WIKDuYwSAzvfxVE73RJWu185NDwNvrM2WIKDuYwSAzvfxVE7W8Y/O185NDwkPrW4WcY/O4sSAzsYPrW4RIKDuV85NDzexVE755USuYwSAzvp8Fm7W8Y/O185NDwkPrW4v5USuV85NDzq8Fm7WcY/O4sSAzsYPrW455USuYwSAzvp8Fm73RJWu185NDwNvrM23xJWu4oSAzuNvrM2v5USuV85NDzq8Fm7/38AAP///z//fwAA////P/9/AAD///8//38AAP7//z//fwAA////P/9/AAD///8//38AAP7//z//fwAA/v//P/9/AAD+//8//38AAP///z//f///////v/9///////+//3////7//7//f///////v/9///////+//3///////7//f////v//v/9////+//+//3////7//7//f///////v84C/3////8/zgL/f////z/OAv9/////P84C/3////8/fP3/f////z98/f9/////P3z9/3////8/fP3/f////z///waA////v///BoD///+///8GgP///7///waA////vwAAhqL///+/AACGov///78AAIai////vwAAhqL///+//////////7//////////v/////////+//////////7+f6/9/////P5/r/3////8/n+v/f////z+f6/9/////P9oW/3////8/2hb/f////z/aFv9/////P9oW/3////8//3//f////z//f/9/////P/9//3////8//3//f////z///52i////v///naL///+///+dov///7///52i////vzQB/3////8/NAH/f////z80Af9/////PzQB/3////8/JD7/f////z8kPv9/////PyQ+/3////8/JD7/f////z8Xwf9/////PxfB/3////8/F8H/f////z8Xwf9/////P///Pb7///+///89vv///7///z2+////v///Pb7///+/AAD5vf///78AAPm9////vwAA+b3///+/AAD5vf///78=")
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_1ppmf")

[node name="Node3D" type="Node3D"]
script = ExtResource("1_qr6e3")

[node name="clock_1" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0, -1, 0, 1, 0, 0, 0, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_qr6e3")
skeleton = NodePath("")

[node name="clock_1_arm_hours" type="MeshInstance3D" parent="clock_1"]
transform = Transform3D(0.8660254, -7.5710346e-08, -0.49999997, -8.742278e-08, -1, 0, -0.49999997, 4.3711385e-08, -0.8660254, 0, -0.008000016, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_o5s8l")
skeleton = NodePath("")

[node name="clock_1_arm_minutes" type="MeshInstance3D" parent="clock_1"]
transform = Transform3D(-0.4999999, -4.371138e-08, -0.86602545, 8.742278e-08, -1, 0, -0.86602545, -7.5710346e-08, 0.4999999, 0, -0.0059999824, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_k30pi")
skeleton = NodePath("")

[node name="clock_1_arm_seconds" type="MeshInstance3D" parent="clock_1"]
transform = Transform3D(1, 0, 0, 0, -1, 1.3076631e-07, 0, -1.3076631e-07, -1, 0, -0.004000008, 0)
cast_shadow = 0
mesh = SubResource("ArrayMesh_irm82")
skeleton = NodePath("")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.097971946)
light_color = Color(0.7645111, 0.7645111, 0.76451105, 1)
light_energy = 0.1
omni_range = 0.196
omni_attenuation = 0.1
